# oneshot

./: Cargo.toml  DEV.md  README.md  README.new.md  lefthook.yml  op-export.sh
examples/config/: example1.toml
