[workspace]
resolver = "2"
members = ["packages/oneshot_utils", "packages/oneshot_rust_anthropic", "packages/oneshot_cli", "packages/oneshot_common", "packages/oneshot_rust", "packages/clust_ext"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
publish = false

[workspace.dependencies]
derive-new = { git = "https://github.com/OmarTawfik-forks/derive-new", branch = "impl-into" } # "0.6.0"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
fmt-derive = "0.1.2"
derive_builder = "0.13.0"
derive-getters = { git = "https://git.sr.ht/~dengor/derive-getters", branch = "feature/copy-getters-for-primitive-types", features = ["auto_copy_getters"] }
anyhow = "1.0.80"
proptest = "1.5.0"
clust = "0.9.0"
tokio = { version = "1.38.0", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
indoc = "2.0.5"
lazy_static = "1.5.0"
strum = { version = "0.26.3", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive", "env"] }
serde = { version = "1.0.203" }
serde_json = "1.0.120"
serde-xml-rs = "0.6.0"
reqwest = "0.12.5"
syn = "2.0.68"
quote = "1.0.36"
env_logger = { version = "0.11.3" }
tokio-stream = { version = "0.1.15" }

#[profile.test.package.proptest]
#opt-level = 3
#
#[profile.test.package.rand_chacha]
#opt-level = 3

[profile.dev]
opt-level = 1
