[workspace]
resolver = "2"
members = ["packages/clust_ext", "packages/oneshot_aist", "packages/oneshot_cli", "packages/oneshot_common", "packages/oneshot_rust", "packages/oneshot_rust_anthropic", "packages/oneshot_utils", "packages/pseudorust", "packages/tasks"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
publish = false

[workspace.dependencies]
derive-new = "0.7.0"
derive_more = { version = "1.0.0", features = ["full"] }
fmt-derive = "0.1.2"
derive_builder = "0.20.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
anyhow = "1.0.80"
proptest = "1.5.0"
clust = { git = "https://github.com/DenisGorbachev/clust", branch = "dev", features = ["hash"] }
tokio = { version = "1.44.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
indoc = "2.0.5"
lazy_static = "1.5.0"
strum = { version = "0.26.3", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive", "env"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde-xml-rs = "0.6.0"
reqwest = "0.12.5"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
syn = { version = "2.0.68", features = ["full", "visit"] }
quote = { version = "1.0.36" }
env_logger = { version = "0.11.3" }
tokio-stream = { version = "0.1.15" }
clust_ext = { path = "./packages/clust_ext" }
save-load = { git = "https://github.com/DenisGorbachev/save-load", features = ["clap", "serde_json", "serde_yaml"] }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
oneshot_common = { path = "./packages/oneshot_common" }
oneshot_utils = { path = "./packages/oneshot_utils" }
oneshot_rust = { path = "./packages/oneshot_rust" }
fs-err = { version = "2.11.0" }
itertools = { version = "0.13.0" }
bat = { version = "0.24.0", default-features = false, features = ["paging", "regex-fancy"] }
prettyplease = { version = "0.2.20" }
pulldown-cmark = { version = "0.11.0" }
throbber-widgets-tui = { version = "0.6.0" }
ratatui = { version = "0.27.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["default", "local-time", "env-filter"] }
serde_yaml = { version = "0.9.34" }
time = { version = "0.3.36", features = ["macros", "formatting"] }
thiserror = { version = "1.0.61" }
constcat = { version = "0.5.0" }
homedir = { version = "0.3.3" }
directories = { version = "5.0.1" }
num-traits = { version = "0.2.19" }
tap = { version = "1.0.1" }
indexmap = { version = "2.2.6" }
rustc-hash = { version = "2.0.0" }
quick-xml = { version = "0.35.0", features = ["serialize"] }
duct = { version = "0.13.7" }
tempfile = { version = "3.10.1" }
lsp-types = { version = "0.97.0" }
#[profile.test.package.proptest]
#opt-level = 3
#
#[profile.test.package.rand_chacha]
#opt-level = 3

[profile.dev]
opt-level = 1
